cluster up, approle setup, k8s example still ded

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 cluster-keys.json
+terraform/.terraform/*
+terraform/terraform.tfstate
+terraform/terraform.tfstate.backup
+terraform/.terraform.lock.hcl
